labs/lab-16-homedepot-prep/exercises/03-envoy-routing/envoy-routing-config.yml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
  namespace: proxy-lab
data:
  envoy.yaml: |
    static_resources:
      listeners:
        - name: listener_0
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 8080
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: ingress_http
                    codec_type: AUTO
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: backend
                          domains: ["*"]
                          routes:
                            - match:
                                prefix: "/api/"
                              route:
                                cluster: httpbin_backend
                                prefix_rewrite: "/"
                            - match:
                                prefix: "/"
                              route:
                                cluster: nginx_backend
                    http_filters:
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

      clusters:
        - name: httpbin_backend
          type: STRICT_DNS
          connect_timeout: 5s
          load_assignment:
            cluster_name: httpbin_backend
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: httpbin.proxy-lab.svc.cluster.local
                          port_value: 80
        - name: nginx_backend
          type: STRICT_DNS
          connect_timeout: 5s
          load_assignment:
            cluster_name: nginx_backend
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: nginx-backend.proxy-lab.svc.cluster.local
                          port_value: 80

    admin:
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9901
